# fileupload_test

./: .gitignore  README.md  mix.exs  requirements.txt
app/: package.json
app/src/: App.js
fileupload_test/: main.py  schema.py  server.py  settings.py
fileupload_test_rust/: Cargo.toml
fileupload_test_rust/src/: main.rs  schema.rs
lib/: fileupload_test.ex
lib/fileupload_test/: application.ex  rest.ex  router.ex  schema.ex  xd.html
lib/fileupload_test/resolvers/: stuff.ex
lib/fileupload_test/schema/: stuff.ex
priv/static/absinthe_graphiql/@absinthe/graphql-playground/: playground.css  playground.js
priv/static/absinthe_graphiql/@absinthe/socket-graphiql/: socket-graphiql.js
priv/static/absinthe_graphiql/graphiql-workspace/: graphiql-workspace.css  graphiql-workspace.js
src/: index.js  package.json
test/: fileupload_test_test.exs
