[package]
name = "fileupload_test_rust"
version = "0.1.0"
authors = ["Thomas Timmer <thomas.timmer@bettyblocks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "2.5.0"
async-graphql-actix-web = "2.5.0"
actix-web = "3.0.0"
actix-rt = "1.1.0"
slab = "0.4.2"
futures = "0.3.0"